@@ -38,6 +38,7 @@
 #include "Arithmetic.h"
 #include "Compnum.h"
 #include "TextualOutputPort.h"
+#include "EqHashTable.h"
 #include "ProcedureMacro.h"
 
 using namespace scheme;
