@@ -53,8 +53,8 @@
 #include "Pair-inl.h"
 #include "scheme.h"
 #include "OSCompatThread.h"
-#include "VM.h"
 #include "EqHashTable.h"
+#include "VM.h"
 #include "Symbol.h"
 #include "Closure.h"
 #include "Gloc.h"
