@@ -1,3 +1,7 @@
+2009-05-25  higepon  <higepon@users.sourceforge.jp>
+
+        * RecordProcedures.cpp : Fixed. generative rtds were global.
+
 2009-05-23  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/queue.ss: Added simple queue library.
